--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -2,3 +2,5 @@
 <p>SEK : USD</p>
 
 <h2>De senaste transaktionerna</h2>
+
+<p>För närvarande har vi {{ adat.nrofusers }} användare. Våra användare har hittills gjort {{ adat.nroftransactions }} transaktioner.</p>
