Displaying user account details from db

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div ng-app="myApp" ng-controller="myCtrl">
-    <h1>Varmt välkommen till Forex-trading!!!</h1>
+    <h1>Varmt välkommen till Forex trading!!!</h1>
 
-    <p><strong>Varför ska du använda våra tjänster?</strong></p>
+    <h2>Varför ska du använda våra tjänster?</h2>
     <ul>
         <li>Du som registrerar dig får ett startkapital på 1000 kr.</li>
         <li>Som inloggad användare kan du göra ytterligare inbetalningar.</li>
@@ -11,15 +11,15 @@
         <li>Vi jobbar med väldigt låga provisioner.</li>
     </ul>
 
+    <h2>Här kan du</h2>
     <form>
-        <strong>Här kan du</strong>:<br>
         <input type="radio" name="loginPage" [(ngModel)]="loginPage" value="login">LOGGA IN<br>
         <input type="radio" name="loginPage" [(ngModel)]="loginPage" value="register">REGGA DIG<br><br>
     </form>
 
     <div [ngSwitch]="loginPage">
         <div *ngSwitchCase="'login'">
-            <h2>Logga in med en befintlig användare</h2>
+            <h3>Logga in med en befintlig användare</h3>
             <!-- <p>{{ loginPage }}</p> -->
             <form>
                 <label for="email">Din epostadress</label><br>
@@ -31,9 +31,6 @@
                 <button type="submit" class="btn btn-success" (click)="login()">Login</button>
             </form>
             <p>De allra flesta som ägnar sig åt hasardspel blir av med sina pengar. Tänk på detta innan du loggar in.</p>
-            <div class="">
-                {{email}}
-            </div>
         </div>
         <div *ngSwitchCase="'register'">
             <h2>Skapa en ny användare</h2>
