--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -4,6 +4,8 @@ table {
 
 th {
     border: solid 2px black;
+    min-width: 100px;
+    text-align: center;
 }
 
 td {
@@ -14,4 +16,28 @@ td {
 th img {
     height: 100px;
     max-width: 200px;
+}
+
+.payment {
+    clear: both;
+    padding-top: 20px;
+}
+
+form button {
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+form input {
+    font-size: 20px;
+}
+
+.history {
+    float: left;
+    width: 300px;
+}
+
+.history h3 {
+    margin: 0;
+    padding-bottom: 10px;
 }
