select currency for transaction

--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -3,4 +3,4 @@
 
 <h2>De senaste transaktionerna</h2>
 
-<p>För närvarande har vi {{ adat.nrofusers }} användare. Våra användare har hittills gjort {{ adat.nroftransactions }} transaktioner.</p>
+<p>För närvarande har vi {{ adat.nrofusers }} användare. Våra användare har hittills gjort {{ adat.nroftransactions }} transaktioner och {{ adat.nrofpayments }} inbetalningar.</p>
