Adding exchange rate converter to transactions

--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -1,5 +1,8 @@
 <h1>Aktuella valutakurser</h1>
-<p>SEK : USD</p>
+<p>{{ rates.gbp }} GBP = {{ rates.sek }} SEK</p>
+<p>{{ rates.gbp }} GBP = {{ rates.usd }} USD</p>
+<p>{{ rates.gbp }} GBP = {{ rates.eur }} EUR</p>
+<p>{{ rates.gbp }} GBP = {{ rates.chf }} CHF</p>
 
 <h2>De senaste transaktionerna</h2>
 
