--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -18,8 +18,11 @@
     </form>
 
     <div *ngIf="sold_currency && purch_currency">
+        <h2>Kontobalans</h2>
+        <p>Du har x {{ sold_currency }}. Du kan köpa högst y {{ purch_currency }}.</p>
         <h2>Aktuell valutakurs</h2>
-        <p>1 {{ purch_currency }} kostar 0.1 {{ sold_currency }}</p>
+        <p>1 {{ purch_currency }} kostar {{ getRate(1, rates[purch_currency | lowercase], rates[sold_currency | lowercase]) }} {{ sold_currency }}</p>
+        <!-- <h3>{{ getRate(1, rates[purch_currency | lowercase], rates[sold_currency | lowercase]) }}</h3> -->
     </div>
-    <!-- <h3>{{ sold }}</h3> -->
+    <!-- <h3>{{ myData | getRate: 1 : 'sek' : 'eur' }}</h3> -->
 </div>
