--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -15,11 +15,11 @@
         <th><img src="../../assets/images/flag_ch.png" alt="Swiss flag"></th>
     </tr>
     <tr>
-        <td><strong>{{ adat.sek }}</strong> SEK</td>
-        <td><strong>{{ adat.eur }}</strong> EUR</td>
-        <td><strong>{{ adat.gbp }}</strong> GBP</td>
-        <td><strong>{{ adat.usd }}</strong> USD</td>
-        <td><strong>{{ adat.chf }}</strong> CHF</td>
+        <td><strong>{{ adat.sek.toFixed(2) }}</strong> SEK</td>
+        <td><strong>{{ adat.eur.toFixed(2) }}</strong> EUR</td>
+        <td><strong>{{ adat.gbp.toFixed(2) }}</strong> GBP</td>
+        <td><strong>{{ adat.usd.toFixed(2) }}</strong> USD</td>
+        <td><strong>{{ adat.chf.toFixed(2) }}</strong> CHF</td>
     </tr>
 </table>
 <h2>Historik</h2>
