--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -41,3 +41,16 @@ form input {
     margin: 0;
     padding-bottom: 10px;
 }
+
+.finalimage {
+    clear: both;
+    max-width: 500px;
+    margin: auto;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    max-width: 700px;
+}
