--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -7,3 +7,5 @@
 <h2>De senaste transaktionerna</h2>
 
 <p>För närvarande har vi {{ adat.nrofusers }} användare. Våra användare har hittills gjort {{ adat.nroftransactions }} transaktioner och {{ adat.nrofpayments }} inbetalningar.</p>
+
+<p>{{ currentValues }}</p>
