First attempt at connecting to forex-socket

--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -8,4 +8,4 @@
 
 <p>För närvarande har vi {{ adat.nrofusers }} användare. Våra användare har hittills gjort {{ adat.nroftransactions }} transaktioner och {{ adat.nrofpayments }} inbetalningar.</p>
 
-<p>{{ currentValues }}</p>
+<p>Current: {{ currentValues }}</p>
