--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
         <li>Du som registrerar dig får ett startkapital på 1000 kr.</li>
         <li>Som inloggad användare kan du göra ytterligare inbetalningar.</li>
         <li>Hos oss kan du köpa och sälja SEK, EUR, USD, GBP och CHF.</li>
-        <li>Valutakurserna uppdateras en gång per timme.</li>
+        <li>Valutakurserna uppdateras kontinuerligt.</li>
         <li>Du får tillgång till valutornas historik.</li>
-        <li>Vi jobbar med väldigt låga provisioner.</li>
+        <li>Vi jobbar utan provisioner.</li>
     </ul>
 
     <h2>Här kan du</h2>
