--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -72,3 +72,20 @@ footer {
     text-shadow: 0px 1px 0px #8ecc12;
     outline: 0;
 }
+
+@media screen and (max-width: 600px) {
+    .button {
+        padding: 10px 20px;
+        margin-right: 5px;
+    }
+    .appmain nav {
+        max-width: 420px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .button {
+        padding: 14px;
+        margin-right: 4px;
+    }
+}
