--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -1,7 +1,9 @@
 <div ng-app="myApp" ng-controller="myCtrl">
-    <h1>Handla med valutor</h1>
-    <h2>Här kan du välja vad du vill sälja och köpa:</h2>
+    <h1>Transaktioner</h1>
+    <p>Våra <strong>{{ adattotal.nrofusers }} användare</strong> har hittills gjort <strong>{{ adattotal.nroftransactions }} transaktioner</strong> och <strong>{{ adattotal.nrofpayments }} inbetalningar</strong>.</p>
 
+    <!-- <h2>Här kan du välja vad du vill sälja och köpa:</h2> -->
+    <h2>Starta en transaktion</h2>
     <form>
         Jag vill köpa
         <select name="purch_currency" [(ngModel)]="purch_currency">
