--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -1,38 +1,45 @@
-<h1>Aktuella kurser</h1>
-<p>1 CHF = {{ currentValues[0] }} SEK</p>
-<p>1 EUR = {{ currentValues[1] }} SEK</p>
-<p>1 GBP = {{ currentValues[2] }} SEK</p>
-<p>1 USD = {{ currentValues[3] }} SEK</p>
+<div ng-app="myApp" ng-controller="myCtrl">
 
-<h2>Live infographic</h2>
+    <h1>Aktuella kurser</h1>
+    <p>1 CHF = {{ currentValues[0] }} SEK</p>
+    <p>1 EUR = {{ currentValues[1] }} SEK</p>
+    <p>1 GBP = {{ currentValues[2] }} SEK</p>
+    <p>1 USD = {{ currentValues[3] }} SEK</p>
 
-<div class="chart-wrapper">
-    <canvas baseChart
-    [datasets]="barChartData"
-    [labels]="barChartLabels"
-    [options]="barChartOptions"
-    [plugins]="barChartPlugins"
-    [legend]="barChartLegend"
-    [chartType]="barChartType"
-    [colors]="barChartColors">
-  </canvas>
-</div>
+    <h2>Live infographic</h2>
 
-<div class="chart-wrapper">
-    <canvas baseChart
-        [datasets]="lineChartData"
-        [labels]="lineChartLabels"
-        [options]="lineChartOptions"
-        [colors]="lineChartColors"
-        [legend]="lineChartLegend"
-        [chartType]="lineChartType"
-        [plugins]="lineChartPlugins">
-    </canvas>
-</div>
+    <div class="chart-wrapper">
+        <canvas baseChart
+        [datasets]="barChartData"
+        [labels]="barChartLabels"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [legend]="barChartLegend"
+        [chartType]="barChartType"
+        [colors]="barChartColors">
+      </canvas>
+    </div>
 
-<h2>Meddelanden</h2>
-<div id="all-messages" class="all-messages">
-    <p *ngFor="let message of currentValues">
-        {{message}}
-    </p>
+    <form>
+        Välj valuta
+        <select name="chosen_currency" [(ngModel)]="chosen_currency">
+            <option value="chf">CHF</option>
+            <option value="eur">EUR</option>
+            <option value="gbp">GBP</option>
+            <option value="usd">USD</option>
+        </select>
+    </form>
+
+
+    <div class="chart-wrapper">
+        <canvas baseChart
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            [plugins]="lineChartPlugins">
+        </canvas>
+    </div>
 </div>
